// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alerts can accept childrens 1`] = `
<div
  className=" alert alert-success"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <Component
    type="success"
  />
  <span
    id="child"
  >
    a Child
  </span>
</div>
`;

exports[`alerts can include a title 1`] = `
<div
  className=" alert alert-success"
>
  <strong>
    hello
  </strong>
  <br />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <Component
    type="success"
  />
</div>
`;
